# pdf-text-extract-mcp

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
src/: main.rs
